# floatmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_win64.bat  build_win86.bat
include/floatmath/: floatmath.h  floatops.h
src/: fm_add_test.c  fm_divide_test.c  fm_multiply_test.c  fm_substract_test.c
src/floatmath/: floatmath.c  floatops.c
